# ib-typ

./: .gitignore  Cargo.toml  README.md  build.ps1  lib.typ  typst.toml
crates/ib-typ/: Cargo.toml  test.ps1
crates/ib-typ-ide/: Cargo.toml  build.ps1  pack.ps1
crates/ib-typ-ide/src/: lib.rs  wasm.rs
crates/ib-typ-ide/src/link/: tree.rs
crates/ib-typ-ide/src/paste/: kind.rs  mod.rs
crates/ib-typ-ide/src/www/: mod.rs
crates/ib-typ/src/: lib.rs  wasm.rs
crates/ib-typ/src/link/: mod.rs  tree.rs
crates/ib-typ/src/plain/: mod.rs
crates/ib-typ/src/time/: duration.rs  mod.rs  short.rs
crates/ib-typ/src/www/: community.rs  mod.rs  search.rs
src/: badge.typ  calc.typ  code.typ  color.typ  ffi.typ  icon.typ  layouts.typ  lib.typ  link.typ  list.typ  refs.typ  texts.typ  time.typ  uri.typ  util.typ  www.typ
src/introspection/: mod.typ  scope.typ
src/time/: duration.typ  mod.typ
tests/: code.typ  color.typ  layouts.typ  link.typ  list.typ  refs.typ  texts.typ  time.typ  uri.typ  www.typ
tests/introspection/: scope.typ
tests/time/: duration.typ  mod.typ
vscode/: README.md  package-lock.json  package.json  webpack.config.js
vscode/docs/: README.typ
vscode/src/: extension.ts  paste.ts  util.ts
vscode/src/test/: extension.test.ts
