[package]
name = "ib-typ"
version = "0.1.0"
edition = "2024"

[features]
default = ["wasm"]
wasm = [
    "dep:wasm-minimal-protocol",
    "dep:ciborium",
    "dep:typwire",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bon = "3"
ciborium = { version = "0.2", optional = true }
jiff = { version = "0.2", default-features = false, features = [
    "std",
    "perf-inline",
] }
logos = { version = "0.16", default-features = false, features = [
    "export_derive"
] }
minijinja = "2.14"
nop-macros = "0.2"
serde = { version = "1", features = ["derive"] }
typwire = { version = "0.1", optional = true }
unicode-ident = "1"
wasm-minimal-protocol = { version = "0.1", optional = true }
